force-app/main/default/objects/OCE__ExpenseType__c/OCE__ExpenseType__c.object-meta.xml
<CustomObject>
    <description>The Expense Type object holds information related to category or line item expenses.</description>
    <label>Expense Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>