force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE9__IncludeInTotalTOV__c.field-meta.xml
<CustomField>
    <fullName>OCE9__IncludeInTotalTOV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Expense is part of Net pay Calculation.</description>
    <inlineHelpText>Flag to indicate if the Expense is part of Net pay Calculation.</inlineHelpText>
    <label>Include In Total TOV</label>
    <type>Checkbox</type>
</CustomField>