force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE9__TransferOfValueType__c.field-meta.xml
<CustomField>
    <fullName>OCE9__TransferOfValueType__c</fullName>
    <description>Transfer of value type</description>
    <inlineHelpText>Transfer of value type</inlineHelpText>
    <label>Transfer Of Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation / Lodging</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Registration Fee</fullName>
            </value>
            <value>
                <fullName>Gifts and Donations for research and Scientific evaluation</fullName>
            </value>
            <value>
                <fullName>Gifts and donations for other Health purposes</fullName>
            </value>
            <value>
                <fullName>Donations and gifts to public benefits associations</fullName>
            </value>
            <value>
                <fullName>Professional training / Continuing Professional development</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Total Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>