force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__Countries__c.field-meta.xml
<CustomField>
    <fullName>OCE__Countries__c</fullName>
    <description>Countries</description>
    <inlineHelpText>Countries</inlineHelpText>
    <label>Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>