force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__DistributionType__c.field-meta.xml
<CustomField>
    <fullName>OCE__DistributionType__c</fullName>
    <description>Determines how an expense can be distributed.</description>
    <inlineHelpText>Determines how an expense can be distributed.</inlineHelpText>
    <label>Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
                <isActive>false</isActive>
                <label>Global</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>