force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>The end date of the Expense Type.</description>
    <inlineHelpText>The end date of the Expense Type.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>