force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__ExpenseAvailability__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExpenseAvailability__c</fullName>
    <description>The field defines Expense Type availability for Call and Meeting objects</description>
    <inlineHelpText>The field defines Expense Type availability for Call and Meeting objects</inlineHelpText>
    <label>Expense Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
                <default>true</default>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>