force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__GLCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__GLCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A general ledger, or GL, is a means for keeping record of a company&apos;s total financial accounts. This code represents the financial system reference of the expense type</description>
    <label>GL Code</label>
    <referenceTo>OCE__GLCode__c</referenceTo>
    <relationshipLabel>Expense Types</relationshipLabel>
    <relationshipName>ExpenseTypes</relationshipName>
    <type>Lookup</type>
</CustomField>