force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__IncludeInCap__c.field-meta.xml
<CustomField>
    <fullName>OCE__IncludeInCap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the expense should be included in Monetary Cap calculations.</description>
    <inlineHelpText>Determines if the expense should be included in Monetary Cap calculations.</inlineHelpText>
    <label>Include in Cap</label>
    <type>Checkbox</type>
</CustomField>