force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__LightningIconName__c.field-meta.xml
<CustomField>
    <fullName>OCE__LightningIconName__c</fullName>
    <defaultValue>&apos;custom:custom31&apos;</defaultValue>
    <description>Icon that displays on Expense Lightning component (Salesforce) for an Expense Type. Example: custom:custom31</description>
    <inlineHelpText>Icon that displays on Expense Lightning component (Salesforce) for an Expense Type. Example: custom:custom31</inlineHelpText>
    <label>Lightning Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>