force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__MeetingRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingRecordTypes__c</fullName>
    <description>Contains a multiselect list of Meeting record types so that multiple Meeting record types can be assigned for an Expense Type at once. This can be used instead of the Meeting Type field, which is a single select picklist of Meeting record types.</description>
    <inlineHelpText>Contains a multiselect list of Meeting record types so that multiple Meeting record types can be assigned for an Expense Type at once. This can be used instead of the Meeting Type field, which is a single select picklist of Meeting record types.</inlineHelpText>
    <label>Meeting Record Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__MeetingRecordTypes</valueSetName>
    </valueSet>
</CustomField>