force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__MeetingSubtype__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingSubtype__c</fullName>
    <description>The subtype of a Meeting that this Expense Type is applicable for.</description>
    <inlineHelpText>The subtype of a Meeting that this Expense Type is applicable for.</inlineHelpText>
    <label>Meeting Subtype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live/In-Person</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Symposia</fullName>
            </value>
            <value>
                <fullName>Lunch and Learn</fullName>
                <label>Lunch &amp; Learn</label>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Preceptorship</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Speaker Meeting</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Education Grant</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Fellowship</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Scientific</fullName>
            </value>
            <value>
                <fullName>Expert Training</fullName>
            </value>
            <value>
                <fullName>Field Sales Training</fullName>
            </value>
            <value>
                <fullName>Grant Review Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>