force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__MeetingType__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingType__c</fullName>
    <description>The type of Meeting that this Expense Type is applicable for.</description>
    <inlineHelpText>The type of Meeting that this Expense Type is applicable for.</inlineHelpText>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speaker_Meeting</fullName>
                <label>Speaker Meeting</label>
            </value>
            <value>
                <fullName>Rep_Presentation</fullName>
                <label>Rep Presentation</label>
            </value>
            <value>
                <fullName>Displays_Exhibits</fullName>
                <label>Displays and Exhibits</label>
            </value>
            <value>
                <fullName>HCP_Sponsorship</fullName>
                <label>HCP Sponsorship</label>
            </value>
            <value>
                <fullName>Home_Office_Speaker_Meeting</fullName>
                <label>Home Office Speaker Meeting</label>
            </value>
            <value>
                <fullName>Advisory_Board</fullName>
                <label>Advisory Board</label>
            </value>
            <value>
                <fullName>Home_Office_Congress</fullName>
                <label>Congress</label>
            </value>
            <value>
                <fullName>Consulting_Services</fullName>
                <label>Consulting Services</label>
            </value>
            <value>
                <fullName>Grant_Donation</fullName>
                <label>Grant</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Event_Sponsorship</fullName>
                <label>Event Sponsorship</label>
            </value>
            <value>
                <fullName>Review_Committee</fullName>
                <label>Review Committee</label>
            </value>
            <value>
                <fullName>InvestigatorInitiatedStudy</fullName>
                <label>Investigator-Initiated Study</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>