force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__MobileIconName__c.field-meta.xml
<CustomField>
    <fullName>OCE__MobileIconName__c</fullName>
    <description>Mobile icon name (Apollo Icon name)</description>
    <inlineHelpText>Apollo Icon name, which will be used in mobile expense screen for an Expense Type</inlineHelpText>
    <label>Mobile Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>