force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__ParentCategory__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Line Item record types to set the parent Category.</description>
    <inlineHelpText>Used for Line Item record types to set the parent Category.</inlineHelpText>
    <label>Parent Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__ExpenseType__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__ExpenseType__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>LineItems</relationshipName>
    <type>Lookup</type>
</CustomField>