force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__PaymentTypeID__c.field-meta.xml
<CustomField>
    <fullName>OCE__PaymentTypeID__c</fullName>
    <description>ID of Payment Type from external system.</description>
    <inlineHelpText>ID of Payment Type from external system</inlineHelpText>
    <label>Payment Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>