force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__Reportable__c.field-meta.xml
<CustomField>
    <fullName>OCE__Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the Expense Type is reportable or not.</description>
    <inlineHelpText>Determines if the Expense Type is reportable or not.</inlineHelpText>
    <label>Reportable?</label>
    <type>Checkbox</type>
</CustomField>