force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>The start date of the Expense Type.</description>
    <inlineHelpText>The start date of the Expense Type.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>