force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__Status__c.field-meta.xml
<CustomField>
    <fullName>OCE__Status__c</fullName>
    <description>The status of the Expense Type.</description>
    <inlineHelpText>The status of the Expense Type.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>