force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__Type__c.field-meta.xml
<CustomField>
    <fullName>OCE__Type__c</fullName>
    <description>The type this Expense Type record pertains to, such as food &amp; beverage or travel.</description>
    <inlineHelpText>The type this Expense Type record pertains to, such as food &amp; beverage or travel.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food&amp;Beverage</fullName>
                <label>Food &amp; Beverage</label>
            </value>
            <value>
                <fullName>FFS</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>