force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__TypeCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__TypeCode__c</fullName>
    <description>The financial system code for the Meeting.</description>
    <inlineHelpText>The financial system code for the Meeting.</inlineHelpText>
    <label>Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>