force-app/main/default/objects/OCE__ExpenseType__c/fields/OCE__WithholdingTaxCalculationType__c.field-meta.xml
<CustomField>
    <fullName>OCE__WithholdingTaxCalculationType__c</fullName>
    <description>Calculation type to be used for calculation of Withholding Tax Amount on Meeting Member Service record</description>
    <label>Withholding Tax Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>NetAmount</fullName>
                <label>Net Amount</label>
            </value>
            <value>
                <fullName>NetAmountWithTax</fullName>
                <label>Net Amount With Tax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>