force-app/main/default/objects/OCE__ExpenseType__c/recordTypes/OCE__Category.recordType-meta.xml
<RecordType>
    <fullName>OCE__Category</fullName>
    <active>true</active>
    <label>Category</label>
</RecordType>