force-app/main/default/objects/OCE__ExpenseType__c/recordTypes/OCE__LineItem.recordType-meta.xml
<RecordType>
    <fullName>OCE__LineItem</fullName>
    <active>true</active>
    <label>Line Item</label>
</RecordType>